--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "msm",
   "dependencies": {
+    "async-eval": "^0.1.5",
     "body-parser": "^1.18.2",
     "cache-manager-mongodb": "^0.1.7",
     "config": "^1.29.4",
@@ -25,7 +26,7 @@
     "nodemon": "^1.17.1"
   },
   "scripts": {
-    "start": "export TZ='UTC'; ./node_modules/.bin/forever start server.js",
+    "start": "export TZ='UTC'; ./node_modules/.bin/forever start index.js",
     "start-dev": "export TZ='UTC'; ./node_modules/.bin/forever -c './node_modules/.bin/nodemon --exitcrash' index.js"
   }
 }
