Updates from msm-dev

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   },
   "scripts": {
     "start": "export TZ='UTC'; ./node_modules/.bin/forever start index.js",
-    "start-dev": "export TZ='UTC'; ./node_modules/.bin/forever -c './node_modules/.bin/nodemon --exitcrash' index.js"
+    "start-dev": "export TZ='UTC'; ./node_modules/.bin/forever -c './node_modules/.bin/nodemon --exitcrash --inspect=0.0.0.0:9229' index.js"
   }
 }
